Fix about page about me section alignment

--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -131,7 +131,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 .about-me {
-    max-width: 500px;
+    max-width: 650px;
     text-align: center;
     margin: 0 auto;
 }
@@ -189,7 +189,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 .nav-list li {
-    display: inline-block;
+    display: block;
 }
 
 .grid-item {
